Add native FFmpeg plugin for HLS/RTMP stream support
This commit adds a complete native FFmpeg-based video decoder to bypass
Unity's VideoPlayer limitations on Windows (no HLS support). The native
plugin provides full codec support via FFmpeg and can be built for
Windows, Linux, and macOS.

Components added:
- Native/: C source code and CMake build system for the FFmpeg wrapper
- Runtime/FFmpeg/: C# P/Invoke wrapper and PrismFFmpegPlayer component
- Editor/: Custom inspector for the FFmpeg player

Build the native plugin by running the build scripts in the Native
directory. See Native/BUILD.md for detailed instructions.

--- a/Runtime/FFmpeg/Prism.FFmpeg.asmdef
+++ b/Runtime/FFmpeg/Prism.FFmpeg.asmdef
@@ -1,15 +1,12 @@
 {
-    "name": "Prism.Editor",
-    "rootNamespace": "Prism.Editor",
+    "name": "Prism.FFmpeg",
+    "rootNamespace": "Prism.FFmpeg",
     "references": [
-        "Prism.Runtime",
-        "Prism.FFmpeg"
+        "Prism"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
