Add Git LFS for large binary files (DLLs, SOs, dylibs)

--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -113,6 +113,13 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
+
+      - name: Setup Git LFS
+        run: |
+          git lfs install
+          git lfs pull
 
       - name: Download Windows Plugin
         uses: actions/download-artifact@v4
