Fix FFmpeg assembly reference to Prism.Runtime

--- a/Runtime/FFmpeg/Prism.FFmpeg.asmdef
+++ b/Runtime/FFmpeg/Prism.FFmpeg.asmdef
@@ -2,7 +2,7 @@
     "name": "Prism.FFmpeg",
     "rootNamespace": "Prism.FFmpeg",
     "references": [
-        "Prism"
+        "Prism.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
